16bpcgenのソースファイルを分割した。

--- a/c++/16bpcgen/v2/Makefile
+++ b/c++/16bpcgen/v2/Makefile
@@ -1,25 +1,45 @@
-.PHONY: all clean ramp beta builtins
+.PHONY: all clean binclean imgclean ramp betanuri builtins
 
-width = 1920
-height = 1080
+includedir := include/
 
-all: 16bpcgen_fe 16bpcgen_be
+srcdir := src/
+srcfe  := ${addprefix ${srcdir}, 16bpcgen_fe.cpp}
+srcbe  := ${addprefix ${srcdir}, 16bpcgen_be.cpp FrameBuffer.cpp PatternGenerator.cpp}
 
-clean:
-	${RM} 16bpcgen_fe 16bpcgen_be
+bindir := bin/
+binfe  := ${patsubst ${srcdir}%.cpp,${bindir}%, ${firstword ${srcfe}}}
+binbe  := ${patsubst ${srcdir}%.cpp,${bindir}%, ${firstword ${srcbe}}}
+apps   := ${binfe} ${binbe}
+
+CPPFLAGS := -I${includedir} -DENABLE_PNG -DENABLE_TIFF
+LDLIBS     := -lpng -ltiff
+
+width  := 1920
+height := 1080
+
+all: ${apps}
+
+clean: binclean imgclean
+
+binclean:
+	${RM} -r ${dir ${apps}}
+
+imgclean:
 	${RM} *.png *.tif
 
-ramp: all
-	./16bpcgen_fe width=${width} height=${height} initial=000000000000 increment=002200220022 tread=1 | ./16bpcgen_be width=${width} height=${height} input=- output=ramp
+ramp: ${apps}
+	${binfe} width=${width} height=${height} initial=000000000000 increment=002200220022 tread=1 | ${binbe} width=${width} height=${height} input=- output=ramp
 
-beta: 16bpcgen_be
-	./16bpcgen_be width=${width} height=${height} input=- output=black < /dev/zero
+betanuri: ${binbe}
+	$< width=${width} height=${height} input=- output=black < /dev/zero
 
-builtins: 16bpcgen_be
-	./16bpcgen_be width=${width} height=${height} builtins=yes
+builtins: ${binbe}
+	$< width=${width} height=${height} builtins=yes
 
-16bpcgen_fe: 16bpcgen_fe.cpp
+${binfe}: ${srcfe}
+	mkdir -p ${dir $@}
 	${LINK.cc} $^ -o $@
 
-16bpcgen_be: 16bpcgen_be.cpp
-	${LINK.cc} -DENABLE_PNG -DENABLE_TIFF $^ -o $@ -lpng -ltiff
+${binbe}: ${srcbe}
+	mkdir -p ${dir $@}
+	${LINK.cc} $^ ${LDLIBS} -o $@
