/dev/urandom使う例作った。

--- a/c++/16bpcgen/v2/Makefile
+++ b/c++/16bpcgen/v2/Makefile
@@ -1,4 +1,4 @@
-.PHONY: all clean binclean imgclean ramp betanuri builtins
+.PHONY: all apps clean binclean imgclean ramp betanuri whitenoise builtins
 
 includedir := include/
 
@@ -6,18 +6,22 @@ srcdir := src/
 srcfe  := ${addprefix ${srcdir}, 16bpcgen_fe.cpp}
 srcbe  := ${addprefix ${srcdir}, 16bpcgen_be.cpp FrameBuffer.cpp PatternGenerator.cpp}
 
-bindir := bin/
+bindir := ${CURDIR}/bin/
 binfe  := ${patsubst ${srcdir}%.cpp,${bindir}%, ${firstword ${srcfe}}}
 binbe  := ${patsubst ${srcdir}%.cpp,${bindir}%, ${firstword ${srcbe}}}
 apps   := ${binfe} ${binbe}
 
 CPPFLAGS := -I${includedir} -DENABLE_PNG -DENABLE_TIFF
-LDLIBS     := -lpng -ltiff
+LDLIBS   := -lpng -ltiff
 
 width  := 1920
 height := 1080
 
-all: ${apps}
+imgdir := img/
+
+all: apps ramp betanuri whitenoise builtins
+
+apps: ${apps}
 
 clean: binclean imgclean
 
@@ -25,15 +29,33 @@ binclean:
 	${RM} -r ${dir ${apps}}
 
 imgclean:
-	${RM} *.png *.tif
+	${RM} -r ${imgdir}
 
 ramp: ${apps}
-	${binfe} width=${width} height=${height} initial=000000000000 increment=002200220022 tread=1 | ${binbe} width=${width} height=${height} input=- output=ramp
+	mkdir -p ${imgdir}
+	cd ${imgdir}; \
+	${binfe} width=${width} height=${height} initial=000000000000 increment=002200220022 tread=1 | ${binbe} width=${width} height=${height} input=- output=ramp-by-fe
+
+# 	cd ${imgdir}; \
+# 	for i in `seq ${height}`; do \
+# 		for j in `seq ${width}`; do \
+# 			printf \\u`printf %04x $$i`; \
+# 		done; \
+# 	done | ${binbe} width=${width} height=${height} input=- output=ramp-by-shell
 
 betanuri: ${binbe}
+	mkdir -p ${imgdir}
+	cd ${imgdir}; \
 	$< width=${width} height=${height} input=- output=black < /dev/zero
 
+whitenoise: ${binbe}
+	mkdir -p ${imgdir}
+	cd ${imgdir}; \
+	$< width=${width} height=${height} input=- output=whitenoise < /dev/urandom
+
 builtins: ${binbe}
+	mkdir -p ${imgdir}
+	cd ${imgdir}; \
 	$< width=${width} height=${height} builtins=yes
 
 ${binfe}: ${srcfe}
