FrameBufferへのread_img/write_imgの取り込みを完了した。

--- a/c++/16bpcgen/v2/Makefile
+++ b/c++/16bpcgen/v2/Makefile
@@ -5,7 +5,7 @@ includedir := include/
 srcdir := src/
 srcfe  := ${addprefix ${srcdir}, 16bpcgen_fe.cpp}
 srcbe  := ${addprefix ${srcdir}, 16bpcgen_be.cpp FrameBuffer.cpp PatternGenerator.cpp}
-srccnv := ${addprefix ${srcdir}, 16bpcgen_converter.cpp FrameBuffer.cpp read_img.cpp}
+srccnv := ${addprefix ${srcdir}, 16bpcgen_converter.cpp FrameBuffer.cpp}
 
 bindir := ${CURDIR}/bin/
 binfe  := ${patsubst ${srcdir}%.cpp,${bindir}%, ${firstword ${srcfe}}}
