16bpcgenで#includeの依存関係を自動解析できるようにした。
ソースファイルの構成も整理した。

--- a/c++/16bpcgen/v2/Makefile
+++ b/c++/16bpcgen/v2/Makefile
@@ -4,8 +4,16 @@ includedir := include/
 
 srcdir := src/
 srcfe  := ${addprefix ${srcdir}, 16bpcgen_fe.cpp}
-srcbe  := ${addprefix ${srcdir}, 16bpcgen_be.cpp FrameBuffer.cpp PatternGenerator.cpp}
+srcbe  := ${addprefix ${srcdir}, 16bpcgen_be.cpp FrameBuffer.cpp PatternGenerators.cpp}
 srccnv := ${addprefix ${srcdir}, 16bpcgen_converter.cpp FrameBuffer.cpp}
+
+depdir := dep/
+deps   := ${patsubst ${srcdir}%.cpp, ${depdir}%.d, ${srcfe} ${srcbe} ${srccnv}}
+
+objdir := obj/
+objfe  := ${patsubst ${srcdir}%.cpp, ${objdir}%.o, ${srcfe}}
+objbe  := ${patsubst ${srcdir}%.cpp, ${objdir}%.o, ${srcbe}}
+objcnv := ${patsubst ${srcdir}%.cpp, ${objdir}%.o, ${srccnv}}
 
 bindir := ${CURDIR}/bin/
 binfe  := ${patsubst ${srcdir}%.cpp,${bindir}%, ${firstword ${srcfe}}}
@@ -13,14 +21,17 @@ binbe  := ${patsubst ${srcdir}%.cpp,${bindir}%, ${firstword ${srcbe}}}
 bincnv := ${patsubst ${srcdir}%.cpp,${bindir}%, ${firstword ${srccnv}}}
 apps   := ${binfe} ${binbe} ${bincnv}
 
+imgdir := img/
+
+CXXOPT   := -O3
 CPPFLAGS := -I${includedir} -DENABLE_PNG -DENABLE_TIFF
-CXXFLAGS := -Wall -Wextra -Weffc++ -Wcast-align -Wcast-qual -Wformat -Woverloaded-virtual -Wpointer-arith -Wshadow -Wwrite-strings
+CXXFLAGS := -std=c++03 -Wall -Wextra -Weffc++ -Wcast-align -Wcast-qual \
+			-Wformat=2 -Wwrite-strings -Woverloaded-virtual -Wpointer-arith -Wfloat-equal -Wshadow \
+			${CXXOPT}
 LDLIBS   := -lpng -ltiff
 
 width  := 1920
 height := 1080
-
-imgdir := img/
 
 all: apps ramp betanuri whitenoise builtins
 
@@ -35,15 +46,16 @@ clean: binclean imgclean
 	${RM} GTAGS GRTAGS GPATH
 
 binclean:
-	${RM} -r ${dir ${apps}}
+	${RM} -r ${bindir} ${depdir} ${objdir}
 
 imgclean:
 	${RM} -r ${imgdir}
 
-ramp: ${apps}
+ramp: ${binfe} ${binbe}
 	mkdir -p ${imgdir}
 	cd ${imgdir}; \
-	${binfe} width=${width} height=${height} initial=000000000000 increment=002200220022 tread=1 | ${binbe} width=${width} height=${height} input=- output=ramp-by-fe
+	${binfe} width=${width} height=${height} initial=000000000000 increment=002200220022 tread=1 | \
+	${binbe} width=${width} height=${height} input=- output=ramp-by-fe
 
 betanuri: ${binbe}
 	mkdir -p ${imgdir}
@@ -60,14 +72,24 @@ builtins: ${binbe}
 	cd ${imgdir}; \
 	$< width=${width} height=${height} builtins=yes
 
-${binfe}: ${srcfe}
+${binfe}: ${objfe}
 	mkdir -p ${dir $@}
 	${LINK.cc} $^ -o $@
 
-${binbe}: ${srcbe}
+${binbe}: ${objbe}
 	mkdir -p ${dir $@}
 	${LINK.cc} $^ ${LDLIBS} -o $@
 
-${bincnv}: ${srccnv}
+${bincnv}: ${objcnv}
 	mkdir -p ${dir $@}
 	${LINK.cc} $^ ${LDLIBS} -o $@
+
+${objdir}%.o: ${srcdir}%.cpp
+	mkdir -p ${dir $@}
+	${COMPILE.cpp} $< -o $@
+
+${depdir}%.d: ${srcdir}%.cpp
+	mkdir -p ${dir $@}
+	${CXX} ${CPPFLAGS} -MM -MT '$@ ${patsubst ${depdir}%.d, ${objdir}%.o, $@}' -MF $@ $<
+
+-include ${deps}
