--- a/c++/16bpcgen/v2/Makefile
+++ b/c++/16bpcgen/v2/Makefile
@@ -4,8 +4,8 @@ includedir := include/
 
 srcdir := src/
 srcfe  := ${addprefix ${srcdir}, 16bpcgen_fe.cpp}
-srcbe  := ${addprefix ${srcdir}, 16bpcgen_be.cpp        FrameBuffer.cpp Pixel.cpp ImageProcesses.cpp PatternGenerators.cpp}
-srccnv := ${addprefix ${srcdir}, 16bpcgen_converter.cpp FrameBuffer.cpp Pixel.cpp ImageProcesses.cpp PixelConverters.cpp}
+srcbe  := ${addprefix ${srcdir}, 16bpcgen_be.cpp        Image.cpp Pixel.cpp ImageProcesses.cpp PatternGenerators.cpp}
+srccnv := ${addprefix ${srcdir}, 16bpcgen_converter.cpp Image.cpp Pixel.cpp ImageProcesses.cpp PixelConverters.cpp}
 
 depdir := dep/
 deps   := ${patsubst ${srcdir}%.cpp, ${depdir}%.d, ${srcfe} ${srcbe} ${srccnv}}
