16bpcgenでchdirしても__FILE__を保つために（絶対パス化するために）Makefile微修正。

--- a/c++/16bpcgen/v2/Makefile
+++ b/c++/16bpcgen/v2/Makefile
@@ -41,7 +41,7 @@ ${executable}: ${objs}
 
 ${objdir}%.o: ${srcdir}%.cpp
 	mkdir -p ${dir $@}
-	${COMPILE.cpp} $< -o $@
+	${COMPILE.cpp} `readlink -m $<` -o $@
 
 ${depdir}%.d: ${srcdir}%.cpp
 	mkdir -p ${dir $@}
