.dの生成にもCXXFLAGSを利用するようにした。

--- a/c++/16bpcgen/v2/Makefile
+++ b/c++/16bpcgen/v2/Makefile
@@ -55,6 +55,6 @@ ${objdir}%.o: ${srcdir}%.cpp
 
 ${depdir}%.d: ${srcdir}%.cpp
 	@mkdir -p ${dir $@}
-	${CXX} ${CPPFLAGS} -MM -MT '$@ ${patsubst ${depdir}%.d, ${objdir}%.o, $@}' -MF $@ $<
+	${CXX} ${CPPFLAGS} ${CXXFLAGS} -MM -MT '$@ ${patsubst ${depdir}%.d, ${objdir}%.o, $@}' -MF $@ $<
 
 -include ${deps}
