tagsの生成に対応した。

--- a/c++/16bpcgen/v2/Makefile
+++ b/c++/16bpcgen/v2/Makefile
@@ -36,8 +36,12 @@ gtags: GTAGS GRTAGS GPATH
 GTAGS GRTAGS GPATH:
 	gtags -c
 
+tags:
+	ctags ${incdir}*.hpp ${srcdir}*.cpp
+
 clean:
 	${RM} GTAGS GRTAGS GPATH
+	${RM} tags
 	${RM} -r ${bindir} ${depdir} ${objdir} ${libdir}
 	${RM} -r ${imgdir}
 
