--- a/c++/16bpcgen/v2/Makefile
+++ b/c++/16bpcgen/v2/Makefile
@@ -27,7 +27,7 @@ CXXFLAGS += ${CXXVER} -pedantic -Wall -Wextra -Weffc++ -Wcast-align -Wcast-qual 
 			-Wformat=2 -Wwrite-strings -Woverloaded-virtual -Wpointer-arith -Wfloat-equal -Wshadow \
 			${CXXOPT}
 LDFLAGS  += -L${libdir}
-LDLIBS   += -lpng -ltiff -ljpeg # -lz -llzma
+LDLIBS   += -ltiff -lpng -ljpeg # -lz -llzma
 
 all: ${bins}
 
