16bpcgenにsrc/colorspace.cpp追加。

--- a/c++/16bpcgen/v2/Makefile
+++ b/c++/16bpcgen/v2/Makefile
@@ -1,27 +1,42 @@
 .PHONY: all gtags tags clean
 
-incdir := include/
+config := Debug
 
-srcdir := src/
-srcs   := ${addprefix ${srcdir}, 16bpcgen.cpp Image.cpp Pixel.cpp PatternGenerators.cpp ImageProcesses.cpp PixelConverters.cpp}
-main   := ${firstword ${srcs}}
+#####################
+# Directories/Files
+#####################
+incdir := include
 
-depdir := .dep/
-deps   := ${patsubst ${srcdir}%.cpp, ${depdir}%.d, ${srcs}}
+srcdir := src
+mains  := ${addprefix ${srcdir}/, 16bpcgen.cpp colorspace.cpp}
+srcs   := ${addprefix ${srcdir}/, Image.cpp Pixel.cpp PatternGenerators.cpp ImageProcesses.cpp PixelConverters.cpp} ${mains}
 
-objdir := .obj/
-objs   := ${patsubst ${srcdir}%.cpp, ${objdir}%.o, ${srcs}}
+depdir := .dep
+deps   := ${patsubst ${srcdir}/%.cpp, ${depdir}/%.d, ${srcs}}
 
-libdir := lib/
-libs   := ${patsubst ${srcdir}%.cpp, ${libdir}lib%.a, ${main}}
+objdir := .obj
+objs   := ${patsubst ${srcdir}/%.cpp, ${objdir}/%.o, ${srcs}}
 
-bindir := bin/
-bins   := ${patsubst ${srcdir}%.cpp,${bindir}%, ${main}}
+libdir := lib
+libs   := ${patsubst ${srcdir}/%.cpp, ${libdir}/lib%.a, ${firstword ${mains}}}
 
-imgdir := img/
+bindir := bin
+bins   := ${patsubst ${srcdir}/%.cpp,${bindir}/%, ${mains}}
+
+imgdir := img
+
+####################
+# Flags
+####################
+ifeq (${config}, Debug)
+CXXOPT   := -O0 -g3 -fprofile-arcs -ftest-coverage -fsanitize=address
+else
+ifeq (${config}, Release)
+CXXOPT   := -O3
+endif
+endif
 
 CXXVER   := -std=c++03
-CXXOPT   := -O3
 CPPFLAGS += -I${incdir} -DENABLE_PNG -DENABLE_TIFF -DENABLE_JPEG
 CXXFLAGS += ${CXXVER} -pedantic -Wall -Wextra -Weffc++ -Wcast-align -Wcast-qual -Wstrict-aliasing \
 			-Wformat=2 -Wwrite-strings -Woverloaded-virtual -Wpointer-arith -Wfloat-equal -Wshadow \
@@ -29,6 +44,9 @@ CXXFLAGS += ${CXXVER} -pedantic -Wall -Wextra -Weffc++ -Wcast-align -Wcast-qual 
 LDFLAGS  += -L${libdir}
 LDLIBS   += -ltiff -lpng -ljpeg # -lz -llzma
 
+####################
+# Rules
+####################
 all: ${bins}
 
 gtags: GTAGS GRTAGS GPATH
@@ -37,28 +55,28 @@ GTAGS GRTAGS GPATH:
 	gtags -c
 
 tags:
-	ctags ${incdir}*.hpp ${srcdir}*.cpp
+	ctags ${incdir}/*.hpp ${srcdir}/*.cpp
 
 clean:
 	${RM} GTAGS GRTAGS GPATH
 	${RM} tags
-	${RM} -r ${depdir} ${objdir} ${libdir} ${bindir}
+	${RM} -r ${depdir} ${objdir} ${libdir} ${bindir} ./*.gcov
 	${RM} -r ${imgdir}
 
-${bindir}%: ${objdir}%.o ${libs}
+${bindir}/%: ${objdir}/%.o ${libs}
 	@mkdir -p ${dir $@}
-	${LINK.cc} -o $@ $< -l${patsubst ${libdir}lib%.a,%, ${libs}} ${LDLIBS}
+	${LINK.cc} -o $@ $< -l${patsubst ${libdir}/lib%.a,%, ${libs}} ${LDLIBS}
 
-${libs}: ${filter-out ${patsubst ${srcdir}%.cpp, ${objdir}%.o, ${main}}, ${objs}}
+${libs}: ${filter-out ${patsubst ${srcdir}/%.cpp, ${objdir}/%.o, ${mains}}, ${objs}}
 	@mkdir -p ${dir $@}
 	${AR} ruv $@ $^
 
-${objdir}%.o: ${srcdir}%.cpp
+${objdir}/%.o: ${srcdir}/%.cpp
 	@mkdir -p ${dir $@}
 	${COMPILE.cc} -o $@ `readlink -m $<`
 
-${depdir}%.d: ${srcdir}%.cpp
+${depdir}/%.d: ${srcdir}/%.cpp
 	@mkdir -p ${dir $@}
-	${CXX} ${CPPFLAGS} ${CXXFLAGS} -MM -MT '$@ ${patsubst ${depdir}%.d, ${objdir}%.o, $@}' -MF $@ $<
+	${CXX} ${CPPFLAGS} ${CXXFLAGS} -MM -MT '$@ ${patsubst ${depdir}/%.d, ${objdir}/%.o, $@}' -MF $@ $<
 
 -include ${deps}
